--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-20.04, macos-10.15, windows-latest]
+        os: [ubuntu-20.04, macos-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
@@ -29,10 +29,21 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Add requirements
+    - name: Install Ubuntu build deps
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get -qq update
+        sudo apt-get install -y libgirepository1.0-dev gir1.2-gtk-3.0 python3-gi
+
+    - name: Install deps with brew
+      if: runner.os == 'macOS'
+      run: |
+        brew install gtk+3 gobject-introspection gtk-mac-integration
+
+    - name: Add python requirements
       run: |
         python -m pip install --upgrade pip
-        python -m pip install PyGObject
+        python -m pip install PyGObject pycairo
         pip install tox tox-gh-actions
 
     - name: Run tests
