--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,14 @@ jobs:
           CIBW_SKIP: "*-win32"
           CIBW_BEFORE_ALL_LINUX: >
             yum -y -q --enablerepo=extras install epel-release
-            && yum install -y python-gobject python-gobject-base
+            && yum install -y gobject-introspection-devel python-gobject, python-gobject-base
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"
           CIBW_BEFORE_ALL_MACOS: >
-            brew install gobject-introspection
+            brew install gtk+3 gobject-introspection gtk-mac-integration
           CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.09
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: "pip uninstall -y delocate && pip install git+https://github.com/Chia-Network/delocate.git && delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"
           CIBW_TEST_COMMAND: python --version
         run: |
-          python -m pip install -U pip setuptools PyGObject
           python -m cibuildwheel --output-dir wheelhouse
 
       - uses: actions/upload-artifact@v2
