revert test-disable/tornado upgrade and set trio==0.17.0
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -2,7 +2,7 @@ name: Wheels
 
 on:
   workflow_dispatch:
-  pull_request:
+  #pull_request:
 
 jobs:
   build-sdist:
@@ -95,4 +95,3 @@ jobs:
           name: packages_linux_aarch64
           path: |
             dist/*-manylinux2014_aarch64.whl
-
