--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,10 @@ envlist =
 usedevelop = true
 deps =
     setuptools
-    tornado
+    tornado<5.0.0
     coverage
     twisted
-    trio==0.15.0
+    trio==0.17.0
     PyGObject
     pycairo
 
