--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,6 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: arm64
-
       - name: Prepare compiler environment for Windows
         if: runner.os == 'Windows'
         uses: ilammy/msvc-dev-cmd@v1
@@ -47,7 +41,6 @@ jobs:
           CIBW_MANYLINUX_X86_64_IMAGE: quay.io/pypa/manylinux2010_x86_64:latest
           CIBW_ARCHS_LINUX: auto aarch64
           CIBW_MANYLINUX_I686_IMAGE: quay.io/pypa/manylinux2010_i686:latest
-          CIBW_MANYLINUX_AARCH64_IMAGE: quay.io/pypa/manylinux2014_aarch64:latest
           CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
           CIBW_SKIP: "*-win32"
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"
@@ -62,6 +55,31 @@ jobs:
           name: wheels
           path: ./wheelhouse/*.whl
 
+  aarch64_wheels:
+    name: Build manylinux aarch64 wheels
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repos
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+
+      - name: Build aarch64 packages
+        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
+        with:
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: aarch64
+          path: |
+            dist/*-manylinux2014_aarch64.whl
+
   check_artifacts:
     name: Check artifacts are correct
     needs: [cibw_wheels]
@@ -69,10 +87,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
-        with:
-          name: wheels
 
       - name: Check number of downloaded artifacts
         run: |
           ls -al
+          find . -name \*.whl | wc -w
         # .github/workflows/wheel-check.sh 24
