--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,76 +9,59 @@ on:
 
 jobs:
   cibw_wheels:
-    name: Build wheels on ${{ matrix.os }} for Python
+    name: Build ${{ matrix.build }} wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-latest, windows-latest]
+        include:
+          - os: ubuntu-18.04
+            build: "*x86_64* *i686*"
+          - os: ubuntu-18.04
+            build: "*aarch64*"
+          - os: ubuntu-18.04
+            build: "*ppc64le*"
+          - os: ubuntu-18.04
+            build: "*s390x*"
+          - os: windows-2019
+            build: "*win_amd64*"
+          - os: windows-2019
+            build: "*win32*"
+          - os: macos-10.15
+            build: "*x86_64* *arm64*"
 
     steps:
+      - name: Set git to use LF
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          submodules: recursive
 
-      - uses: actions/setup-python@v2
-        name: Install Python
+      - name: Install Python
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
 
-      - name: Prepare compiler environment for Windows
-        if: runner.os == 'Windows'
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: amd64
-
-      - name: Install cibuildwheel
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install cibuildwheel==1.7.4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.0.1
+        if: runner.os == 'Linux'
 
       - name: Build wheels
+        uses: joerick/cibuildwheel@5514dd28f0e6ab8f584981a98ff86c60b77466ed
         env:
-          CIBW_MANYLINUX_X86_64_IMAGE: quay.io/pypa/manylinux2010_x86_64:latest
-          CIBW_ARCHS_LINUX: auto aarch64
-          CIBW_MANYLINUX_I686_IMAGE: quay.io/pypa/manylinux2010_i686:latest
-          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
-          CIBW_SKIP: "*-win32"
-          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"
-          CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.09
-          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "pip uninstall -y delocate && pip install git+https://github.com/Chia-Network/delocate.git && delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"
           CIBW_TEST_COMMAND: python -c "import urwid.tests"
-        run: |
-          python -m cibuildwheel --output-dir wheelhouse
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+          CIBW_ARCHS_LINUX: "x86_64 i686 aarch64 ppc64le s390x"
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
+          CIBW_SKIP: "cp27-* cp35-* *-win32"
+          CIBW_BUILD: "${{ matrix.build }}"
 
       - uses: actions/upload-artifact@v2
         with:
-          name: wheels
           path: ./wheelhouse/*.whl
-
-  aarch64_wheels:
-    name: Build manylinux aarch64 wheels
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repos
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-
-      - name: Build aarch64 packages
-        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
-        with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: aarch64
-          path: |
-            dist/*-manylinux2014_aarch64.whl
 
   check_artifacts:
     name: Check artifacts are correct
