--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [tox]
 envlist =
+    py27
+    py35
     py36
     py37
     py38
     py39
+    pypy
 
 [testenv]
 usedevelop = true
@@ -11,11 +14,19 @@ deps =
     setuptools
     tornado<5.0.0
     coverage
-    twisted
-    trio==0.18.0
-    PyGObject
-    pycairo
-
+    py27: twisted==16.6.0
+    py35: twisted
+    py36: twisted
+    py37: twisted
+    py38: twisted
+    pypy: twisted
+    py35: trio
+    py36: trio==0.18.0
+    py37: trio==0.18.0
+    py38: trio==0.18.0
+    py39: trio==0.18.0
+    py27: mock
+    pypy: mock
 commands =
     coverage run ./setup.py test
     coverage report
