--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,37 @@
 [tox]
-envlist =
-    py27
-    py35
-    py36
-    py37
-    py38
-    py39
-    pypy
+envlist = py{27,35,36,37,38,39,py3}-{linux,macos,windows}
+
+skip_missing_interpreters = true
+
+[gh-actions]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    pypy3: pypy3
+
+[gh-actions:env]
+PLATFORM =
+    ubuntu-18.04: linux
+    macos-latest: macos
+    windows-latest: windows
 
 [testenv]
 usedevelop = true
+
+passenv =
+    pythonLocation
+    CI
+    PIP_DOWNLOAD_CACHE
+
 deps =
     setuptools
     tornado<5.0.0
     coverage
+    macos: PyGObject
     py27: twisted==16.6.0
     py35: twisted
     py36: twisted
@@ -27,8 +45,10 @@ deps =
     py39: trio==0.18.0
     py27: mock
     pypy: mock
+
 commands =
     coverage run ./setup.py test
+    -coverage combine
     coverage report
 
 [testenv:build]
