--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ python =
 
 [gh-actions:env]
 PLATFORM =
-    ubuntu-18.04: linux
+    ubuntu-latest: linux
     macos-latest: macos
     windows-latest: windows
 
@@ -31,6 +31,7 @@ deps =
     setuptools
     tornado<5.0.0
     coverage
+    coverage_python_version
     macos: PyGObject
     py27: twisted==16.6.0
     py35: twisted
