chg: test: set max trio versions (py35 needs lesss than 0.14.0)
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -33,17 +33,17 @@ deps =
     coverage
     coverage_python_version
     macos: PyGObject
-    py27: twisted==16.6.0
+    py27: twisted~=16.6.0
     py35: twisted
     py36: twisted
     py37: twisted
     py38: twisted
     pypy: twisted
-    py35: trio
-    py36: trio==0.18.0
-    py37: trio==0.18.0
-    py38: trio==0.18.0
-    py39: trio==0.18.0
+    py35: trio~=0.13.0
+    py36: trio~=0.18.0
+    py37: trio~=0.18.0
+    py38: trio~=0.18.0
+    py39: trio~=0.18.0
     py27: mock
     pypy: mock
 
