--- a/tox.ini
+++ b/tox.ini
@@ -77,6 +77,11 @@ passenv =
 deps =
     pip>=20.0.1
     path
+    py35: trio~=0.13.0
+    py36: trio~=0.18.0
+    py37: trio~=0.18.0
+    py38: trio~=0.18.0
+    py39: trio~=0.18.0
     -r requirements.txt
 
 commands =
