--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Wheels
 
 on:
   workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - master
+#  pull_request:
+#  push:
+#    branches:
+#      - master
 
 jobs:
   cibw_wheels:
