--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ deps =
     py37: twisted
     py38: twisted
     pypy: twisted
-    py35: trio~=0.13.0
+    py35: trio~=0.14.0
     py36: trio~=0.18.0
     py37: trio~=0.18.0
     py38: trio~=0.18.0
@@ -85,9 +85,6 @@ deps =
     -r requirements.txt
 
 commands =
-    #python -c "import path; path.Path('build').rmtree_p()"
-    #python setup.py test
-    pip install -e .
     # use  --capture=no to see all the doctest output
-    #python -m pytest -v urwid --cov urwid --cov-report term-missing
-    python -m pytest -v --deselect urwid/tests/test_vterm.py::TermTest
+    #python -m pytest -v --deselect urwid/tests/test_vterm.py::TermTest --cov urwid --cov-report term-missing
+    python -m pytest --deselect urwid/tests/test_vterm.py::TermTest
