fix: test: tweak fixed timings, set trio versions, collect warnings
* run github and ravis CI on py36 to py39
* update coverage cfg, set trio 0.13.0 for legacy tests
* adjust timings (again) for trioeventloop test

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,5 @@
 [pytest]
 minversion = 6.0
-addopts = --doctest-modules
-doctest_optionflags =
-    ELLIPSIS
-    NORMALIZE_WHITESPACE
+addopts = --doctest-modules --cov=urwid --cov-report=term
 testpaths =
     urwid/tests
