--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    pypy3: pypy3
+    pypy3: pypy
 
 [gh-actions:env]
 PLATFORM =
@@ -39,11 +39,11 @@ deps =
     py37: twisted
     py38: twisted
     pypy: twisted
-    py35: trio~=0.14.0
-    py36: trio~=0.18.0
-    py37: trio~=0.18.0
-    py38: trio~=0.18.0
-    py39: trio~=0.18.0
+    py35: trio~=0.13.0
+    py36: trio~=0.15.0
+    py37: trio~=0.15.0
+    py38: trio~=0.15.0
+    py39: trio~=0.15.0
     py27: mock
     pypy: mock
 
@@ -76,12 +76,6 @@ passenv =
 
 deps =
     pip>=20.0.1
-    path
-    py35: trio~=0.13.0
-    py36: trio~=0.18.0
-    py37: trio~=0.18.0
-    py38: trio~=0.18.0
-    py39: trio~=0.18.0
     -r requirements.txt
 
 commands =
