fix: test: event loop timing and relax the exit assert (trio)
* pypy3 still running after 40 min, remove it (same error on travis)

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,35,36,37,38,39,py3}-{linux,macos,windows}
+envlist = py{27,35,36,37,38,39,310,py3}-{linux,macos,windows}
 
 skip_missing_interpreters = true
 
@@ -11,6 +11,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10.0-alpha: py310
     pypy3: pypy
 
 [gh-actions:env]
@@ -40,12 +41,16 @@ deps =
     py38: twisted
     pypy: twisted
     py35: trio~=0.13.0
-    py36: trio~=0.15.0
-    py37: trio~=0.15.0
-    py38: trio~=0.15.0
-    py39: trio~=0.15.0
+    py36: trio~=0.18.0
+    py37: trio~=0.18.0
+    py38: trio~=0.18.0
+    py39: trio~=0.18.0
+    py310: trio~=0.18.0
     py27: mock
     pypy: mock
+
+commands_pre =
+    python -m pip install -U pip wheel setuptools
 
 commands =
     coverage run ./setup.py test
